--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
 
     <color name="white">#f0f0f0</color>
     <color name="iron">#363636</color>
+
+    <color name="com_facebook_button_background_color_focused_disabled">#48696b</color>
+    <color name="com_facebook_button_background_color_focused">#008577</color>
+    <color name="com_facebook_button_border_color_focused">#00574B</color>
 </resources>
