--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="colorControlNormal">@color/colorGrayLight</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
         <item name="android:textColorHint">@color/colorPrimaryDark</item>
+        <item name="colorControlHighlight">@color/com_facebook_button_background_color_focused_disabled</item>
     </style>
 
     <style name="AppTheme.Dark" parent="AppTheme">
