--- a/app/src/main/res/layout/chatroom_message_item.xml
+++ b/app/src/main/res/layout/chatroom_message_item.xml
@@ -26,10 +26,12 @@
 
     <TextView
         android:id="@+id/chatroom_message_item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/chatroom_message_item_avatar"
         app:layout_constraintTop_toBottomOf="@id/chatroom_message_item_date" />
 
