--- a/app/src/main/res/layout/chatroom_message_item_mirror.xml
+++ b/app/src/main/res/layout/chatroom_message_item_mirror.xml
@@ -17,10 +17,13 @@
 
     <TextView
         android:id="@+id/chatroom_message_item_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_item_avatar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chatroom_message_item_date" />
 
     <TextView
