--- a/app/src/main/res/layout/chatroom_message_image_mirror.xml
+++ b/app/src/main/res/layout/chatroom_message_image_mirror.xml
@@ -19,6 +19,7 @@
         android:id="@+id/chatroom_message_image_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_image_avatar"
         app:layout_constraintTop_toBottomOf="@id/chatroom_message_image_name" />
 
@@ -26,6 +27,7 @@
         android:id="@+id/chatroom_message_image_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_image_avatar"
         app:layout_constraintTop_toTopOf="parent" />
 
