--- a/app/src/main/res/layout/chatroom_message_item_mirror.xml
+++ b/app/src/main/res/layout/chatroom_message_item_mirror.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_item_avatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chatroom_message_item_date" />
@@ -30,6 +31,7 @@
         android:id="@+id/chatroom_message_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_item_avatar"
         app:layout_constraintTop_toBottomOf="@+id/chatroom_message_item_name" />
 
@@ -37,6 +39,7 @@
         android:id="@+id/chatroom_message_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textEnd"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_item_avatar"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
