--- a/app/src/main/res/layout/chatroom_message_image.xml
+++ b/app/src/main/res/layout/chatroom_message_image.xml
@@ -25,7 +25,7 @@
     <ImageView
         android:id="@+id/chatroom_message_image_image"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
