--- a/app/src/main/res/layout/chatroom_message_image_mirror.xml
+++ b/app/src/main/res/layout/chatroom_message_image_mirror.xml
@@ -34,7 +34,7 @@
     <ImageView
         android:id="@+id/chatroom_message_image_image"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         app:layout_constraintEnd_toStartOf="@+id/chatroom_message_image_avatar"
         app:layout_constraintStart_toStartOf="parent"
