--- a/app/src/main/res/layout/fragment_chatroom.xml
+++ b/app/src/main/res/layout/fragment_chatroom.xml
@@ -19,16 +19,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chatroom_recycler"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/chatroom_swipe_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/chatroom_camera_fab"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/chatroom_camera_fab"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chatroom_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/chatroom_camera_fab"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <EditText
         android:id="@+id/chatroom_inputbox"
         android:layout_width="0dp"
