--- a/app/src/main/res/layout/fragment_chatroom_list.xml
+++ b/app/src/main/res/layout/fragment_chatroom_list.xml
@@ -7,9 +7,11 @@
     android:layout_height="match_parent">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/chatroom_list_swipe_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/chatroom_swipe_view">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatroom_view"
